1109- Deployed to Azurez

--- a/1109-Wallin-Azure-Test-3/Views/Home/Index.cshtml
+++ b/1109-Wallin-Azure-Test-3/Views/Home/Index.cshtml
@@ -5,4 +5,9 @@
 
 <h2>Index</h2>
 
-<p>If this works, sweet. It's about 6/10 on the Sweet scale.</p>
+
+<div class="jumbotron">
+    <p>If this works, sweet. It's about 6/10 on the Sweet scale.</p>
+    <p>Update, deployade till GitHub. amblam. Zam.</p>
+</div>
+
